Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116777

Package created with windeployqt gives error when exe run

XMLWordPrintable

    • Windows
    • 8c468fc2a (dev), 9dd2dd4ab (6.6), aeef46f72 (tqtc/lts-6.5)

      If simply browser is build with Qt6.6.0-beta3 it runs fine from Qt Creator or if simplebrowser.exe is. copied to QtDIR\bin folder. 

      But if windeployqt is used to create deployment package and when you try to execute the binary from file browser it gives error that "Render process exited with code...."

      Attached is the screenshot of the error.

        For Gerrit Dashboard: QTBUG-116777
        # Subject Branch Project Status CR V

            anualiyas Anu Aliyas
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes