[windeployqt] Copy v8 context snapshot

- Copy v8 context snapshot while creating package with windeployqt

Fixes: QTBUG-116777
Change-Id: I707e1d147ebf0ba5ee63dd25218e23ac850efe45
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
(cherry picked from commit 8c468fc2ab3bdfb4f49eb9db10db0fb805d64180)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>